<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    android:elevation="@dimen/dimen_16dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_content_option_sheet_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/icons"
    android:clipToPadding="true"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="@string/bottom_sheet_behavior">
    <LinearLayout
        android:orientation="vertical"
        android:paddingBottom="@dimen/dimen_16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="17sp"
                android:textColor="@color/text_primary"
                android:text="@string/content_insert_options"
                android:padding="@dimen/dimen_16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <ImageView
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:id="@+id/action_close_tab_content_options"
                android:tint="@color/secondary_text"
                android:layout_marginStart="@dimen/dimen_16dp"
                android:src="@drawable/ic_expand_more_black_24dp"
                android:layout_marginEnd="@dimen/dimen_16dp"
                android:layout_gravity="center_vertical"
                android:layout_width="@dimen/dimen_30dp"
                android:layout_height="@dimen/dimen_30dp" />
        </RelativeLayout>
        <View
            android:layout_marginBottom="@dimen/dimen_8dp"
            android:background="@color/divider_faint"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
        <RelativeLayout
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:focusable="true"
            android:id="@+id/content_option_multiplechoice"
            android:padding="@dimen/dimen_16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:tint="@color/text_secondary"
                android:src="@drawable/ic_multiple_choice"
                android:id="@+id/multiple_choice"
                android:layout_centerVertical="true"
                android:layout_width="@dimen/dimen_20dp"
                android:layout_height="@dimen/dimen_20dp" />

            <TextView
                android:text="@string/content_type_multiple_choice"
                android:layout_marginStart="@dimen/dimen_16dp"
                android:layout_toEndOf="@+id/multiple_choice"
                android:textSize="15sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RelativeLayout>


        <RelativeLayout
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:focusable="true"
            android:id="@+id/content_option_filltheblanks"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:padding="@dimen/dimen_16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:tint="@color/text_secondary"
                android:id="@+id/device_image"
                android:src="@drawable/ic_create_black_24dp"
                android:layout_centerVertical="true"
                android:layout_width="@dimen/dimen_20dp"
                android:layout_height="@dimen/dimen_20dp" />

            <TextView
                android:layout_marginStart="@dimen/dimen_16dp"
                android:layout_toEndOf="@+id/device_image"
                android:textSize="15sp"
                android:text="@string/content_type_fill_the_blanks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RelativeLayout>


        <RelativeLayout
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:focusable="true"
            android:id="@+id/content_option_multimedia"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:padding="@dimen/dimen_16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:tint="@color/text_secondary"
                android:id="@+id/perm"
                android:src="@drawable/ic_perm_media_black_24dp"
                android:layout_centerVertical="true"
                android:layout_width="@dimen/dimen_20dp"
                android:layout_height="@dimen/dimen_20dp" />

            <TextView
                android:layout_marginStart="@dimen/dimen_16dp"
                android:layout_toEndOf="@+id/perm"
                android:textSize="15sp"
                android:text="@string/content_type_multimedia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RelativeLayout>


        <RelativeLayout
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:focusable="true"
            android:id="@+id/content_option_link"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:padding="@dimen/dimen_16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:tint="@color/text_secondary"
                android:id="@+id/link_option"
                android:src="@drawable/ic_insert_link_black_24dp"
                android:layout_centerVertical="true"
                android:layout_width="@dimen/dimen_20dp"
                android:layout_height="@dimen/dimen_20dp" />

            <TextView
                android:layout_marginStart="@dimen/dimen_16dp"
                android:layout_toEndOf="@+id/link_option"
                android:textSize="15sp"
                android:text="@string/content_type_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RelativeLayout>

    </LinearLayout>


</android.support.v4.widget.NestedScrollView>