<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        app:showAsAction="always"
        android:id="@+id/content_action_undo"
        android:title="@string/content_editor_menu_undo"
        android:icon="@drawable/ic_undo_white_24dp"
        />

    <item
        app:showAsAction="always"
        android:id="@+id/content_action_redo"
        android:title="@string/content_editor_menu_redo"
        android:icon="@drawable/ic_redo_white_24dp"
        />

    <item
        app:showAsAction="always"
        android:id="@+id/content_action_format"
        android:title="@string/content_editor_menu_text_formatting"
        android:icon="@drawable/ic_text_format_white_24dp"
        />

    <item
        app:showAsAction="always"
        android:id="@+id/content_action_insert"
        android:title="@string/content_insert_options"
        android:icon="@drawable/ic_add_white_24dp"
        />

    <item
        app:showAsAction="always"
        android:id="@+id/content_action_preview"
        android:title="@string/content_editor_preview"
        android:icon="@drawable/ic_document_preview"
        />

    <item
        app:showAsAction="always"
        android:icon="@drawable/ic_format_textdirection_l_to_r_white_24dp"
        android:id="@+id/content_action_direction"
        android:title="@string/content_editor_directionality"/>

    <item
        android:visible="true"
        app:showAsAction="always"
        android:id="@+id/content_action_pages"
        android:icon="@drawable/ic_piled_pages"
        android:title="@string/content_editor_menu_pages"
        />

</menu>